# nevup-ai-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DECISIONS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml
.github/workflows/: keep-alive.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  db.py  main.py  models.py  schemas.py
app/audit/: router.py
app/auth/: deps.py  jwt.py
app/coaching/: groq_client.py  intervention.py  router.py
app/memory/: embeddings.py  router.py  service.py
app/metrics/: behavioral.py
app/observability/: logging.py  (+2 more)
docs/: architecture.md  methodology.md
eval/: audit_final.md  audit_phase_1.md  audit_phase_2.md  audit_phase_3.md  audit_phase_4.md  audit_phase_5.md  cv_report.json  holdout_report.json  multi_label_report.json  tuned_thresholds.json
frontend/: .env.local.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
loadtest/: k6_run.sh  k6_session_events.js  summary_to_html.py
scripts/: cv_eval.py  eval_harness.py  feature_extractor.py  generate_multi_label_traders.py  generate_synthetic_traders.py  mint_token.py  seed.py  tune_thresholds.py
tests/: conftest.py  test_audit.py  test_auth.py  test_coaching.py  test_embeddings.py  test_eval_harness.py  test_memory_router.py  test_memory_service.py  test_metrics.py  test_multi_label_eval.py  test_persistence.py  test_profiling_router.py  test_profiling_rules.py  test_seed.py  test_smoke.py  test_synthetic_generator.py  test_threshold_tuner.py
(+19 files in other folders)
