[project]
name = "nevup-ai-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "sqlalchemy[asyncio]==2.0.35",
  "asyncpg==0.29.0",
  "alembic==1.13.3",
  "pgvector==0.3.6",
  "pyjwt==2.9.0",
  "google-generativeai==0.8.3",
  "groq==0.11.0",
  "httpx==0.27.2",
  "python-multipart==0.0.12",
  "orjson==3.10.7",
  "scikit-learn==1.5.2",
  "numpy==2.1.2",
  "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.6.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
markers = [
    "integration: tests that require a running Postgres database",
]

[tool.ruff]
line-length = 100
target-version = "py312"
